PROJECT(PRM_RUN)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

# do not forget to change this line if needed ("act install -d...")
# set(AGRUM_INSTALLATION_DIRECTORY "/home/nin/agrum")
# set(aGrUM_DIR "${AGRUM_INSTALLATION_DIRECTORY}/lib/cmake/aGrUM/")

FIND_PACKAGE(aGrUM NO_MODULE)

IF (aGrUM_FOUND)
  INCLUDE(${AGRUM_USE_FILE})
ELSE (aGrUM_FOUND)
  MESSAGE(FATAL_ERROR "Please install aGrUM")
ENDIF (aGrUM_FOUND)

FILE(GLOB PRM_RUN_SOURCE ${PRM_RUN_SOURCE_DIR}/*.cpp)
FILE(GLOB PRM_RUN_INCLUDE ${PRM_RUN_SOURCE_DIR}/*.h)

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_BINARY_DIR})

ADD_CUSTOM_COMMAND(
  OUTPUT ${PRM_RUN_SOURCE_DIR}/Parser.cpp ${PRM_RUN_SOURCE_DIR}/Parser.h ${PRM_RUN_SOURCE_DIR}/Scanner.cpp ${PRM_RUN_SOURCE_DIR}/Scanner.h
  COMMAND cococpp ${PRM_RUN_SOURCE_DIR}/prm_run.atg -o ${PRM_RUN_SOURCE_DIR}
  DEPENDS ${PRM_RUN_SOURCE_DIR}/prm_run.atg ${PRM_RUN_SOURCE_DIR}/Scanner.frame ${PRM_RUN_SOURCE_DIR}/Parser.frame
  )

ADD_EXECUTABLE (prm_run ${PRM_RUN_SOURCE}
                ${PRM_RUN_SOURCE_DIR}/Parser.h
                ${PRM_RUN_SOURCE_DIR}/Parser.cpp
                ${PRM_RUN_SOURCE_DIR}/Scanner.h
                ${PRM_RUN_SOURCE_DIR}/Scanner.cpp)

SET_TARGET_PROPERTIES(prm_run PROPERTIES LINKER_LANGUAGE CXX)

TARGET_LINK_LIBRARIES(prm_run ${AGRUM_LIBRARIES})

INSTALL(TARGETS prm_run RUNTIME DESTINATION bin)

CONFIGURE_FILE(
  "${CMAKE_CURRENT_SOURCE_DIR}/cmake_uninstall.cmake.in"
  "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake"
  IMMEDIATE @ONLY)

ADD_CUSTOM_TARGET(uninstall
  "${CMAKE_COMMAND}" -P "${CMAKE_CURRENT_BINARY_DIR}/cmake_uninstall.cmake")

